k8s-manifests/08-grafana-deployment.yaml
# Grafana Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana-stack
  labels:
    app: grafana
    name: grafana
    tier: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: secrets-store-sa
      automountServiceAccountToken: true
      restartPolicy: Always
      containers:
      - name: grafana
        image: grafana/grafana:latest
        resources:
          limits:
            memory: "250Mi"
            cpu: "150m"
          requests:
            memory: "125Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
        command: ["/bin/sh", "-c"]
        args:
          - |
            TENANT_ID=$(cat /mnt/secrets-store/azure-tenant-id)
            export GF_AUTH_AZUREAD_AUTH_URL="https://login.microsoftonline.com/${TENANT_ID}/oauth2/v2.0/authorize"
            export GF_AUTH_AZUREAD_TOKEN_URL="https://login.microsoftonline.com/${TENANT_ID}/oauth2/v2.0/token"
            exec /run.sh
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: secrets-store
          mountPath: /mnt/secrets-store
          readOnly: true
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: grafana-secrets
