k8s-manifests/09-grafana-service.yaml
# Grafana Service
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana-stack
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
