k8s-manifests/14-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-cross-namespace
  namespace: grafana-stack
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: grafana-stack
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: grafana-stack
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-cross-namespace
  namespace: postgres-stack
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: postgres-stack
  - from:
    - namespaceSelector:
        matchLabels:
          name: grafana-stack
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: postgres-stack
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
